--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,6 +164,7 @@ services:
       RK_OTP_EXPIRED: "otp.v1.expired"
       OTP_TTL_SEC: "300"
       OTP_LENGTH: "6"
+      REDIS_URL: "redis://redis:6379/0"
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -196,6 +197,17 @@ services:
     depends_on:
       authentication_service:
         condition: service_started
+
+  redis:
+    image: redis:7
+    command: ["redis-server", "--appendonly", "yes"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+    ports:
+      - "6379:6379"
 
 volumes:
   pgdata_account:
