--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -236,6 +236,7 @@ services:
       TUITION_SERVICE_URL: "http://tuition_service:8080"
       OTP_SERVICE_URL: "http://otp_service:8080"
       NOTIFICATION_SERVICE_URL: "http://notification_service:8080"
+      AUTHENTICATION_SERVICE_URL: "http://authentication_service:8080"
     ports:
       - "8000:8080"
     command: ["uvicorn", "gateway.app.main:app", "--host", "0.0.0.0", "--port", "8080"]
